Removed text from offer, fixed z-index

--- a/client/src/components/Offer/Offer.css
+++ b/client/src/components/Offer/Offer.css
@@ -1,80 +1,68 @@
-.popupBackground {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 9999;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .popupContainer {
-    background-color: #fff;
-    padding: 20px;
-    width: 380px;
-    border-radius: 4px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-  
-  .offerForm {
-    margin: 30px auto;
-    width: 100%;
-    max-width: 380px;
-  }
-  
-  .offerForm label {
-    color: #666;
-    display: inline-block;
-    margin-bottom: 10px;
-    text-align: center;
-    width: 100%;
-  }
-  
-  .offerForm input,
-  .offerForm textarea {
-    box-sizing: border-box;
-    font-size: 14px;
-    outline: 0;
-    padding: 4px;
-    width: 100%;
-    margin-bottom: 20px;
-  }
-  
-  .offerForm ::placeholder {
-    color: rgb(177, 177, 177);
-    text-align: left;
-  }
-  
-  .offerForm button {
-    background: rgb(164, 142, 255);
-    border: 1px solid rgb(164, 142, 255);
-    border-radius: 4px;
-    color: #fff;
-    cursor: pointer;
-    display: inline-block;
-    font-size: 14px;
-    padding: 8px 16px;
-    text-decoration: none;
-    text-transform: uppercase;
-    transition: 0.3s ease background;
-    width: 100%;
-  }
-  
-  .offerForm button:hover {
-    background: #fff;
-    color: #43a3e6;
-    transition: 0.3s ease background;
-  }
-  
-  .offerForm h1 {
-    text-align: center;
-    margin: 15px;
-  }
+.popupContainer {
+  padding: 20px;
+  width: 380px;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  z-index: 10;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+}
+
+.offerForm {
+  margin: 30px auto;
+  width: 100%;
+  max-width: 380px;
+}
+
+.offerForm label {
+  color: #666;
+  display: inline-block;
+  margin-bottom: 10px;
+  text-align: center;
+  width: 100%;
+}
+
+.offerForm input,
+.offerForm textarea {
+  box-sizing: border-box;
+  font-size: 14px;
+  outline: 0;
+  padding: 4px;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.offerForm ::placeholder {
+  color: rgb(177, 177, 177);
+  text-align: left;
+}
+
+.offerForm button {
+  background: rgb(164, 142, 255);
+  border: 1px solid rgb(164, 142, 255);
+  border-radius: 4px;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 14px;
+  padding: 8px 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: 0.3s ease background;
+  width: 100%;
+}
+
+.offerForm button:hover {
+  background: #fff;
+  color: #43a3e6;
+  transition: 0.3s ease background;
+}
+
+.offerForm h1 {
+  text-align: center;
+  margin: 15px;
+}
 
